# Kobalt

./: .dockerignore  .gitignore  Directory.Build.props  Kobalt.sln  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: docs.yml
Boron/: Boron.csproj  Dockerfile  Program.cs
Boron/Properties/: launchSettings.json
Kobalt.Artists.API/: Kobalt.Artists.API.csproj
Kobalt.Artists.API/API/: FurAffinityAPI.cs
Kobalt.Artists.Data/: Kobalt.Artists.Data.csproj
Kobalt.Artists.Data/Entities/: Artist.cs  ArtistFlags.cs
Kobalt.Bot/: GlobalUsings.cs  Kobalt.Bot.csproj  Program.cs  appsettings.json
Kobalt.Bot/Commands/: OverlayCommand.cs
Kobalt.Bot/Handlers/: PostExecutionHandler.cs
Kobalt.Bot/Services/: ImageOverlayService.cs
Kobalt.InfractionAPI/Kobalt.Infractions.API/: Kobalt.Infractions.API.csproj  Program.cs
Kobalt.InfractionAPI/Kobalt.Infractions.Shared/: InfractionType.cs  (+1 more)
Kobalt.Infrastructure/: Kobalt.Infrastructure.csproj
Kobalt.ReminderService.API/: Dockerfile  Program.cs
Kobalt.ReminderService.Data/: ReminderContext.cs
Kobalt.ShardCoordinator/: Kobalt.ShardCoordinator.csproj  Program.cs  appsettings.json
docs/: docfx.json  filterConfig.yml
iridium/: .env  Cargo.toml  diesel.toml
iridium/.migrations/: 202202231807_create_tables.sql
iridium/migrations/2023-02-25-091012_initial_iridium_setup/: down.sql  up.sql
iridium/sql/: phash.sql
iridium/src/: api.rs  discord.rs  main.rs  models.rs  schema.rs
site/: .gitignore  features.html  index.html  package-lock.json  tailwind.config.js
zirconium/: Cargo.toml
(+586 files in other folders)
