[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc     = "0.8.3"
protobuf = "3.2.0"
futures  = "~0.3"
img_hash = "3.2.0"
sqlx     = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate" ] }
tokio    = { version = "1.14.0", features = ["full"] }
serde    = { version = "1.0.130", features = ["derive"] }

[build-dependencies]
protoc-rust-grpc = "0.8.3"