[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.8"
axum-auth = "0.4.0"
hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"] }
tokio    = { version = "1.14.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal"] }

serde    = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"

img_hash = "3.2.0"

chrono = { version = "0.4.19", features = ["serde"] }
dotenvy = "0.15.6"

diesel = { version = "2.0.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.2.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
